test/cases/unused_labels.2.zig
comptime {
    foo: for ("foo") |_| {}
}

// error
//
// :2:5: error: unused for loop label
